--- a/20191028/index.html
+++ b/20191028/index.html
@@ -3,57 +3,53 @@
     <meta charset="UTF-8" />
     <title>Document</title>
     <script src="脚本"></script>
-    <link rel="" href="">
-      <!-- 外链式 -->
-      <style>
+    <link rel="" href="" />
+    <!-- 外链式 -->
+    <style>
       /* 内联式 */
-      </style>
+    </style>
   </head>
   <body>
-  Hello world ! 
-  <li></li>
-  <span></span>
-  o<small>o</small> 
-  <i>o</i>
-  <b>h</b>
-  <strong>w</strong>
-   <a href=""></a><!-- 协议 protocol -->
-   
-  <h1>h1</h1>
-  <h2>h2</h2>
-  <h3>h3</h3>
-  <h4>h4</h4>
-  <h5>h2</h5>
-  <h6>h2</h6>
-  <p>p</p>
-  <p>p</p>
-  <p>p</p>
-  <div>div1</div>
-  <div>div2</div>
-  <div>div3</div>
-  <ol type="I">
-    <li>list-item</li>
-    <li>list-item</li>
-    <li>list-item</li>
-    <li>list-item</li>
-    <li>list-item</li>
-  </ol>
-  <ul type="square">
-    <li>list-item</li>
-    <li>list-item</li>
-    <li>list-item</li>
-    <li>list-item</li>
-    <li>list-item</li>
-  </ul>
+    Hello world !
+    <li></li>
+    <span></span>
+    o<small>o</small>
+    <i>o</i>
+    <b>h</b>
+    <strong>w</strong>
+    <a href=""></a
+    ><!-- 协议 protocol -->
 
-<button>btn1</button>
+    <h1>h1</h1>
+    <h2>h2</h2>
+    <h3>h3</h3>
+    <h4>h4</h4>
+    <h5>h2</h5>
+    <h6>h2</h6>
+    <p>p</p>
+    <p>p</p>
+    <p>p</p>
+    <div>div1</div>
+    <div>div2</div>
+    <div>div3</div>
+    <ol type="I">
+      <li>list-item</li>
+      <li>list-item</li>
+      <li>list-item</li>
+      <li>list-item</li>
+      <li>list-item</li>
+    </ol>
+    <ul type="square">
+      <li>list-item</li>
+      <li>list-item</li>
+      <li>list-item</li>
+      <li>list-item</li>
+      <li>list-item</li>
+    </ul>
+    不逝二严发终处而归入，今快才国们们第下为他日高这四当，尺老览，若。
 
-
-
-
-
-<script>
-//  写在body之前
-</script>
+    <script>
+      //  写在body之前
+    </script>
   </body>
 </html>
